# myRepo-Thesis

./: README.md  learningTest3.txt
KIMKO/: .CMakeLists.txt.swp  CMakeLists.txt  KIMKO.kdev4  main.cpp  main.h  readDataPlot  run.cpp  run.h  unwrap.h
KIMKO/.kdev4/: KIMKO.kdev4
KIMKO/controlPlant/: CMakeLists.txt  controlPlant.cpp  controlPlant.h
KIMKO/leader/: CMakeLists.txt  leader.cpp  leader.h
KIMKO/matplotlib-cpp-master/: CMakeCache.txt  CMakeLists.txt  Makefile
KIMKO/matplotlib-cpp-master/examples/: animation  bar  basic  fill  fill_inbetween  minimal  modern  nonblock  quiver  subplot  surface  update  xkcd
KIMKO/mpc/: CMakeLists.txt  mpc.cpp  mpc.h
KIMKO/obs/: CMakeLists.txt  obs.cpp  obs.h
KIMKO/pid/: CMakeLists.txt  pid.cpp  pid.h
KIMKO/plot/: plot.out  plotThreeDyn.cpp  plotThreeDyn.h  readWritePlot.cpp  readWritePlot.h
KIMKO/traj_plan/: CMakeLists.txt  traj_plan.cpp  traj_plan.h
